--- a/Front-end_develop/app/src/main/res/layout/activity_diary_editor.xml
+++ b/Front-end_develop/app/src/main/res/layout/activity_diary_editor.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSurface"
-    tools:context=".ui.diary.CreateDiaryActivity">
+    tools:context=".ui.diary.editor.CreateDiaryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
